[package]
name = "rust-plurk-oauth"
version = "0.1.0"
authors = ["Dephilia <me@dephilia.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth = { version = "0.5", package = "oauth1-request" }
reqwest = { version = "0.11.4", features = ["blocking", "multipart"]}
serde_qs = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
